# Mekong-SALT

./: .dockerignore  Dockerfile  README.md  demo-runbook-5-phut.md  docker-compose.yml  package-lock.json  summary.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_phase1_baseline.py  0003_mvp_operational_workflow.py  0004_remove_auth.py  0005_monitoring_goals.py  0006_agent_runs_observation_snapshots.py  0007_active_monitoring_worker.py  0008_execution_batches.py  0009_memory_cases.py  0010_domain_events_stream.py  0011_execution_jobs_alias.py  0012_feedback_lifecycle_records.py  0013_knowledge_registry_fields.py  0014_knowledge_registry_retry_fields.py  0015_monitoring_goal_last_processed_reading.py  0016_sensor_readings_ingest_uniqueness.py  0017_gate_management.py  0018_remove_monitoring_goal_auto_plan_enabled.py  dbc5b8693c76_phase_2_core_domain_models.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  execution_policy.py  planning_graph.py  policy_guard.py  providers.py
backend/artifacts/: ingest_dlq_archive.jsonl
backend/document/: backend-db-erd.md  backend-db-erd.puml  demo-runbook-5-phut.md  phase-rollout-pubsub-mqtt-gee-frontend.md  proposal_unit_alignment.md  rag-operations-guide.md
backend/gradio_app/: demo_app.py
backend/scripts/: ingest_rag_samples.py  ingest_rag_source.py  run_demo_scenarios.py  run_demo_setup.py  run_demo_simulation.py  seed.py  send_demo_zalo_notification.py
(+392 files in other folders)
