[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mekong-salt-backend"
version = "0.1.0"
description = "Production-structured FastAPI backend for Mekong-SALT."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116,<1",
    "uvicorn[standard]>=0.35,<1",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.10,<3",
    "sqlalchemy[asyncio]>=2.0.41,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.16,<2",
    "redis>=5,<7",
    "httpx>=0.28,<1",
    "pgvector>=0.3,<1",
    "langgraph>=0.4,<1",
    "google-genai>=1.11,<2",
    "google-cloud-aiplatform>=1.75,<2",
    "google-cloud-pubsub>=2.23,<3",
    "earthengine-api>=1.6,<2",
    "pypdf>=5,<6",
    "paho-mqtt>=2.1,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6,<7",
    "ruff>=0.12,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["app/tests"]
asyncio_mode = "auto"

